--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,9 @@
 <div class="header">
+	{% if include.back %}
+		<div style="float: left;font-size: 21px;margin-right:10px">
+			<a href="{{ include.back }}" style="text-decoration: none">&larr;</a>
+		</div>
+	{% endif %}
 	<div style="display: inline-block;">
 		<h1>Maxime Testu</h1>
 	</div>
