--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,10 +1,9 @@
 <head>
-	<title>Maxime Testu</title>
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"> -->
-	<link rel="stylesheet" href="/css/reset.css">
-	<link rel="stylesheet" href="/css/style.css">
-	<!-- <meta name="viewport" content="initial-scale=1.0"> -->
-	<meta name="viewport" content="width=device-width">
+	{% include head.html %}
+	<meta property="og:type" content="website" />
+	{% if site.portfolio.first and site.portfolio.first.photo %}
+		<meta property="og:image" content="{{ site.portfolio.first.photo }}" />
+	{% endif %}
 </head>
 <body>
 
@@ -14,6 +13,9 @@
 
 	<a href="{{ portfolio.url | prepend: site.baseurl }}" class="excerpt">
 		<div>
+			{% if portfolio.photo %}
+				{% include image.html photo=portfolio.photo %}
+			{% endif %}
 			{{ portfolio.content }}
 		</div>
 	</a>
