--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -1,9 +1,10 @@
+<html prefix="og: http://ogp.me/ns#">
 <head>
 	{% include head.html title=title %}
 
 	<meta property="og:description" content="{{ content | lstrip }}" />
 	<meta property="og:type" content="product" />
-	<meta property="og:image" content="{{ page.photo }}" />
+	<meta property="og:image" content="{{ page.photo | absolute_url }}" />
 </head>
 <body>
 
