--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,9 @@
+<html prefix="og: http://ogp.me/ns#">
 <head>
 	{% include head.html %}
 	<meta property="og:type" content="website" />
 	{% if site.portfolio.first and site.portfolio.first.photo %}
-		<meta property="og:image" content="{{ site.portfolio.first.photo }}" />
+		<meta property="og:image" content="{{ site.portfolio.first.photo | absolute_url }}" />
 	{% endif %}
 </head>
 <body>
