added twitter card meta

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 
 <meta property="og:site_name" content="Maxime Testu" />
 <meta property="og:url" content="{{ page.url | absolute_url }}" />
+<meta name="twitter:card" content="summary_large_image">
 
 <style>
 	{% include css/reset.css %}
