added twitter card meta

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
 <meta property="og:site_name" content="Maxime Testu" />
 <meta property="og:url" content="{{ page.url | absolute_url }}" />
 <meta name="twitter:card" content="summary_large_image">
+<meta property="og:description" content="Art by Maxime Testu" />
 
 <style>
 	{% include css/reset.css %}
