added slider & commentary

--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,1 +1,1 @@
-<img src="{{ include.photo }}" alt="{{ page.title }}">
+<div class="photo"><img src="{{ include.photo }}" alt="{{ page.title }}"></div>
