--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: verdana, sans-serif;
-	padding-top: 40px;
+	padding-top: 60px;
 }
 
 .header {
@@ -10,6 +10,7 @@ body {
 	padding: 10px 20px;
 	width: 100%;
 	box-sizing: border-box;
+	z-index: 1000;
 }
 
 h1 {
@@ -18,14 +19,46 @@ h1 {
 }
 
 .excerpt {
-	text-align: center;
-	margin: 20px;
 	display: block;
-	color: default;
+	color: black;
 	text-decoration: none;
 }
 
+p:first-of-type {
+	margin-top: -10px
+}
+p:last-of-type {
+	margin-bottom: 50px;
+}
+p {
+	margin: 0 auto 20px;
+}
+
+.photos {
+	text-align: center;
+	display: block;
+	text-decoration: none;
+	margin-bottom: 40px !important;
+}
+
+.photo {
+	margin: 0 10px;
+}
+
+.photos-static > .photo {
+	margin: 0 20px 20px 20px;
+	text-align: center;
+}
+
+.slick-slide {
+	height: auto !important;
+}
+
+.slick-list {
+	overflow: hidden;
+}
+
 img {
-	max-width: 100%;
 	max-height: 100%;
+	max-width: 100%;
 }
