--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <script>
 	var resize = function resize() {
-		$('.photos > .photo > img,p').css({
+		$('.photos > .photo > img, .slick-slide > img,p').css({
 			maxWidth: $('html,body').width()-(15/100*$('html,body').width())
 		})
 	}
