--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,1 +1,1 @@
-<div class="photo"><img src="{{ include.photo }}" alt="{{ page.title }}"></div>
+<div class="photo"><img src="/images/{{ include.photo }}" alt="{{ page.title }}"></div>
