--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -1,7 +1,18 @@
 body {
-	font-family: verdana, sans-serif;
+	font-family: helvetica, arial, sans-serif;
 	padding-top: 60px;
 }
+
+// .header {
+// 	position: fixed;
+// 	top: 0;
+// 	background: white;
+// 	padding: 10px 20px;
+// 	width: 100%;
+// 	box-sizing: border-box;
+// 	z-index: 1000;
+// 	text-align: center;
+// }
 
 .header {
 	position: fixed;
@@ -10,8 +21,6 @@ body {
 	padding: 10px 20px;
 	width: 100%;
 	box-sizing: border-box;
-	z-index: 1000;
-	text-align: center;
 }
 
 h1 {
@@ -19,20 +28,27 @@ h1 {
 	font-weight: bold;
 }
 
+h2 {
+	font-style: italic;
+	margin-bottom: 5px;
+}
+
 .excerpt {
 	display: block;
 	color: black;
 	text-decoration: none;
+	margin: auto;
 }
 
-p:first-of-type {
-	margin-top: -10px
+.photo-content {
+	margin: 0 20px;
 }
+
 p:last-of-type {
 	margin-bottom: 50px;
 }
 p {
-	margin: 0 auto 20px;
+	margin: 0 auto 5px;
 }
 
 .photos {
@@ -62,4 +78,5 @@ p {
 img {
 	max-height: 100%;
 	max-width: 100%;
+	margin: auto;
 }
