--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,13 @@
 <div class="header">
 	{% if include.back %}
-		<div style="position: absolute;font-size: 21px;margin-right:10px">
+		<div style="float: left;font-size: 21px;margin-right:10px">
 			<a href="{{ include.back }}" style="text-decoration: none">&larr;</a>
 		</div>
 	{% endif %}
-	<h1>Maxime Testu</h1>
-	<a href="mailto:contact@maximetestu.com">contact@maximetestu.com</a>
+	<div style="display: inline-block;">
+		<h1>Maxime Testu</h1>
+	</div>
+	<div style="display: inline-block;">
+		<a href="mailto:contact@maximetestu.com">contact@maximetestu.com</a>
+	</div>
 </div>
