--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,10 @@
 			<a href="{{ include.back }}" style="text-decoration: none">&larr;</a>
 		</div>
 	{% endif %}
-	<div style="display: inline-block;">
+	<div>
 		<h1>Maxime Testu</h1>
 	</div>
-	<div style="display: inline-block;">
+	<div>
 		<a href="mailto:contact@maximetestu.com">contact@maximetestu.com</a>
 	</div>
 </div>
