added les petits maitres

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,6 @@
 		<h1>Maxime Testu</h1>
 	</div>
 	<div>
-		<a href="mailto:contact@maximetestu.com">contact@maximetestu.com</a>
+		<a href="mailto:contact@maximetestu.com">contact@maximetestu.com</a> · <a href="/files/CV-Maxime-Testu.pdf">CV</a>
 	</div>
 </div>
