--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -1,10 +1,33 @@
 body {
 	font-family: helvetica, arial, sans-serif;
 	padding-top: 60px;
+	line-height: 1;
+}
+
+p {
+	line-height: 1.3;
+}
+p.lead {
+	font-size: 1.3rem;
+	margin-bottom: 1rem;
+}
+p.highlighted {
+	padding: 1rem;
+	background: #eee;
+	margin: 1rem 0;
+	border: 1px solid #999;
 }
 
 a {
 	color: inherit;
+}
+
+b, strong {
+	font-weight: bold;
+}
+
+i {
+	font-style: italic;
 }
 
 .header {
@@ -25,6 +48,12 @@ h1 {
 h2 {
 	font-style: italic;
 	margin-bottom: 5px;
+}
+
+h3 {
+	font-weight: bold;
+	font-size: 1.3rem;
+	margin-bottom: 1rem;
 }
 
 .excerpt {
@@ -73,4 +102,26 @@ img {
 	max-height: 100%;
 	max-width: 100%;
 	margin: auto;
+}
+
+body.page {
+	padding: 1rem;
+}
+.container {
+	max-width: 800px;
+	margin: auto;
+}
+.flex-container {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	margin: -1rem;
+	flex-wrap: wrap;
+}
+.flex-item {
+	margin: 1rem;
+	flex-grow: 2;
+	flex-basis: 30%;
 }
