--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -30,6 +30,14 @@ i {
 	font-style: italic;
 }
 
+ul {
+
+}
+li {
+	margin-left: 15px;
+	margin-bottom: 5px;
+}
+
 .header {
 	position: fixed;
 	top: 0;
@@ -123,5 +131,5 @@ body.page {
 .flex-item {
 	margin: 1rem;
 	flex-grow: 2;
-	flex-basis: 30%;
+	flex-basis: 25%;
 }
